--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -28,12 +28,13 @@
         flex-direction: column;
         li {
             margin: 30px 0 0 0;
-            line-height: 30px;
+            line-height: 70px;
             &:hover {
                 background: none;
             }
             a {
-                font-size: 20px;
+                margin-right: 60px;
+                font-size: 26px;
                 color: #fff;
                 font-weight: bold;
                 &:hover {
