--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -35,11 +35,11 @@
 }
 
 ul.show {
-    top: 65px;
+    top: 60px;
 }
 
 .logo {
-    padding: 0 30px;
+    padding: 0 30px 5px 20px;
     display: flex;
     align-items: center;
     h2 {
@@ -47,6 +47,7 @@ ul.show {
         padding-left: .3em;
         top: 1em;
         padding-top: .3em;
+        font-size: xx-large;
     }
     img {
         @include size(3.4em, 3.4em);
