--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0; }
+
 @font-face {
   font-family: 'GoticaBastard';
   src: url("./fonts/GoticaBastard.ttf") format("truetype");
@@ -54,8 +58,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 30px;
-  margin-top: 13px; }
+  margin-right: 30px; }
   .menu-items li {
     border-radius: 3px;
     margin: 0 5px; }
@@ -70,7 +73,7 @@ a {
       color: #8E05C2; }
 
 ul.show, ol.show {
-  top: 60px; }
+  top: 74px; }
 
 .logo {
   padding: 0 30px 5px 20px;
@@ -99,6 +102,16 @@ ul.show, ol.show {
 .activelinea3-menu-bar {
   transform: rotate(-45deg) translate(-4px, 2px); }
 
+.cart-nav {
+  position: relative; }
+  .cart-nav img {
+    scale: 170%; }
+  .cart-nav p {
+    font-size: small;
+    position: absolute;
+    bottom: 12px;
+    right: 17px; }
+
 @media screen and (max-width: 858px) {
   .menu {
     height: 75px; }
@@ -121,24 +134,32 @@ ul.show, ol.show {
   .menu-items {
     position: fixed;
     width: 100vw;
-    height: calc(100% - 55px);
+    height: calc(100% - 45px);
     background: #3E065F;
     top: -100vh;
     text-align: center;
     transition: all ease-in-out .4s;
     flex-direction: column; }
     .menu-items li {
-      margin: 30px 0 0 0;
+      margin: 20px 0 0 0;
       line-height: 70px; }
       .menu-items li:hover, .menu-items li .active {
         background: none; }
       .menu-items li a {
-        margin-right: 60px;
-        font-size: 26px;
+        font-size: 20px;
         color: #fff;
         font-weight: bold; }
         .menu-items li a:hover {
-          color: #8E05C2; } }
+          color: #8E05C2; }
+    .menu-items .cart-nav {
+      margin: 0px 0 0 0; }
+      .menu-items .cart-nav img {
+        scale: 200%; }
+      .menu-items .cart-nav p {
+        font-size: 0.9em;
+        color: #8E05C2;
+        top: 5px;
+        left: 17px; } }
 
 @media screen and (max-width: 858px) and (orientation: landscape) {
   .menu-items li {
