--- a/src/scss/_cartwidget.scss
+++ b/src/scss/_cartwidget.scss
@@ -6,7 +6,7 @@
     p {
         font-size: small;
         position: absolute;
-        bottom: 12px;
         right: 17px;
+        top: 10px;
     }
 }
