--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -13,6 +13,7 @@
     align-items: center;
     justify-content: center;
     margin-right: 30px;
+    margin-top: 14px;
     li {
         border-radius: 3px;
         margin: 0 5px;
@@ -34,7 +35,7 @@
 }
 
 ul.show {
-    top: 74px;
+    top: 60px;
 }
 
 .logo {
