--- a/src/main.css
+++ b/src/main.css
@@ -8938,12 +8938,8 @@ ul.show, ol.show {
   .logo h2 {
     color: #8E05C2;
     padding-left: .3em;
-    top: 1em;
-    padding-top: .3em;
+    padding-top: .5em;
     font-size: xx-large; }
-  .logo img {
-    width: 3.4em;
-    height: 3.4em; }
 
 .menu-bars {
   display: none; }
@@ -9023,3 +9019,51 @@ ul.show, ol.show {
   .menu-items .menu-items {
     overflow: scroll;
     height: calc(100%-65px); } }
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.lds-ripple {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+  margin-top: 40vh; }
+
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid #8E05C2;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite; }
+
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s; }
+
+@keyframes lds-ripple {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 0; }
+  4.9% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 0; }
+  5% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1; }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0; } }
