--- a/src/main.css
+++ b/src/main.css
@@ -8861,6 +8861,12 @@ textarea.form-control-lg {
   font-style: normal;
   font-weight: normal; }
 
+@font-face {
+  font-family: 'HalfAss';
+  src: url("./fonts/Half_ass-Regular.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal; }
+
 h1 {
   color: #3E065F;
   font-family: 'GoticaBastard', sans-serif;
@@ -9067,3 +9073,75 @@ ul.show, ol.show {
     width: 72px;
     height: 72px;
     opacity: 0; } }
+
+.item-list {
+  display: flex;
+  flex-flow: wrap;
+  align-items: center;
+  justify-content: center; }
+
+.item-card {
+  margin: 0.5em;
+  padding: 1em; }
+  .item-card div {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center; }
+  .item-card img {
+    width: 15em;
+    height: 15em; }
+  .item-card h5 {
+    padding: 0.5em;
+    font-size: 1.5em;
+    font-family: 'HalfAss', sans-serif; }
+  .item-card p {
+    color: #8E05C2;
+    font-size: 1.3em;
+    font-weight: bold; }
+  .item-card button {
+    --border-radius: 15px;
+    border-radius: 15px;
+    --border-width: 4px;
+    appearance: none;
+    position: relative;
+    padding: 1em 2em;
+    border: 0;
+    background-color: #212121;
+    font-family: "Roboto", Arial, "Segoe UI", sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+    color: #fff;
+    z-index: 2; }
+    .item-card button::after {
+      --m-i: linear-gradient(#000, #000);
+      --m-o: content-box, padding-box;
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      padding: var(--border-width);
+      border-radius: var(--border-radius);
+      background-image: conic-gradient(#488cfb, #29dbbc, #ddf505, #ff9f0e, #e440bb, #655adc, #488cfb);
+      -webkit-mask-image: var(--m-i), var(--m-i);
+      mask-image: var(--m-i), var(--m-i);
+      -webkit-mask-origin: var(--m-o);
+      mask-origin: var(--m-o);
+      -webkit-mask-clip: var(--m-o);
+      mask-composite: exclude;
+      -webkit-mask-composite: destination-out;
+      filter: hue-rotate(0);
+      animation: rotate-hue linear 500ms infinite;
+      animation-play-state: paused; }
+    .item-card button:hover::after {
+      animation-play-state: running; }
+    .item-card button:active {
+      --border-width: 5px; }
+
+@keyframes rotate-hue {
+  to {
+    filter: hue-rotate(1turn); } }
+  .item-card button, .item-card button::after {
+    box-sizing: border-box; }
