--- a/src/scss/_universal.scss
+++ b/src/scss/_universal.scss
@@ -14,6 +14,12 @@ $color4: #8E05C2;
     font-style: normal;
     font-weight: normal;
 }
+@font-face {
+    font-family: 'HalfAss';
+    src: url('./fonts/Half_ass-Regular.ttf') format('truetype');
+    font-style: normal;
+    font-weight: normal;
+}
 
 @mixin size($a, $b) {
     width: $a;
