--- a/src/scss/_itemlist.scss
+++ b/src/scss/_itemlist.scss
@@ -5,8 +5,12 @@
     justify-content: center;
 }
 .item-card {
-    margin: 0.5em;
-    padding: 1em;
+    border-radius: 1em;
+    box-shadow: 0px 0px 3px -1px rgba(0,0,0,0.51);
+    -webkit-box-shadow: 0px 0px 3px -1px rgba(0,0,0,0.51);
+    -moz-box-shadow: 0px 0px 3px -1px rgba(0,0,0,0.51);
+    overflow: hidden;
+    margin: 1em;
     div {
         display: flex;
         flex-flow: column;
@@ -27,6 +31,7 @@
         font-weight: bold;
     }
     button {
+        margin: 0.4em;
         --border-radius: 15px;
         border-radius: 15px;
         --border-width: 4px;
