--- a/src/scss/_spinner.scss
+++ b/src/scss/_spinner.scss
@@ -9,7 +9,8 @@
   width: 80px;
   height: 80px;
   margin-top: 40vh;
-}
+  margin-bottom: 40vh;
+}  
 .lds-ripple div {
   position: absolute;
   border: 4px solid $color4;
