--- a/src/scss/import.scss
+++ b/src/scss/import.scss
@@ -1,9 +1,11 @@
 @import "bootstrap";
 @import "universal";
 @import "navbar";
+@import "categories";
 @import "cartwidget";
 @import "homecontainer";
 @import "media";
 @import "spinner";
 @import "itemlist";
+@import "itemdetail";
 @import "footer";
