--- a/src/main.css
+++ b/src/main.css
@@ -8987,7 +8987,10 @@ ul.show, ol.show {
       grid-area: sentimientos; }
     .categories div div {
       margin: 2em;
-      position: relative; }
+      position: relative;
+      transition: .4s; }
+      .categories div div:hover {
+        opacity: 80%; }
       .categories div div img {
         border-radius: 1em;
         width: 20em;
@@ -9222,6 +9225,10 @@ ul.show, ol.show {
 .detail-description {
   grid-area: description;
   margin-top: 1.5em; }
+  .detail-description h3 {
+    font-size: 2em; }
+  .detail-description p {
+    font-size: 1.5em; }
 
 footer {
   margin: 0;
