--- a/src/scss/_cartwidget.scss
+++ b/src/scss/_cartwidget.scss
@@ -3,7 +3,7 @@
     img {
         scale: 170%;
     }
-    p {
+    span {
         font-size: small;
         position: absolute;
         right: 17px;
