--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -4,8 +4,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid #fff;
-    box-shadow: 5px 0 10px rgba($color: $color3, $alpha: .6)
+    box-shadow: 5px 0 10px rgba($color: $color3, $alpha: .6);
+    position: sticky;
 }
 
 .menu-items {
