--- a/src/main.css
+++ b/src/main.css
@@ -9232,9 +9232,15 @@ ul.show, ol.show {
 
 .about-us {
   font-weight: bold;
-  font-size: 1.5em; }
+  font-size: 1.5em;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center; }
   .about-us p {
     margin: 3em; }
+  .about-us iframe {
+    margin: 1em; }
 
 .faq {
   font-weight: bold;
