--- a/src/scss/_aboutus.scss
+++ b/src/scss/_aboutus.scss
@@ -1,7 +1,14 @@
 .about-us {
     font-weight: bold;
     font-size: 1.5em;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
     p {
         margin: 3em;
+    }
+    iframe {
+        margin: 1em;
     }
 }
